navbar collapsed position fixed, all code validated on w3c, read.me updated

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -6,11 +6,9 @@ h1, h2, h3, h4 {
   
 }
 
-navbarNav {
-  position: right;
-}
 
 
+/*--------------General styling*/
 
 body {
   background-color: #FFEDF4;
@@ -23,6 +21,22 @@ img {
   
 }
 
+h3 {
+   margin: auto;
+   padding: 30px;
+}
+
+h2 {
+  margin: auto;
+  padding-top: 3em;
+  padding-bottom: 1em;
+}
+
+
+#socials {
+  margin: auto;
+  padding: 2em;
+}
 
 
 /*--------------Packages------------*/  
@@ -61,6 +75,7 @@ border-radius: 12%;
   display: inline-block;
   text-align: center;
   padding-right: 16em;
+  padding-bottom: 2em;
 }
 
 #package-three {
@@ -80,42 +95,42 @@ font-family: "Roboto", sans-serif;
 
 #wedpackage-one{
   display: inline-block;
-  padding-left: 8em;
+  padding-left: 6em;
   padding-right: 8em;
 }
 
 #wedpackage-two {
   display: inline-block;
-  padding-left: 8em;
-  padding-right: 8em;
+  padding-left: 6em;
+  padding-right: 6em;
  text-align: center;
 }
 
 #wedpackage-three {
   display: inline-block;
-  padding-right: 8em;
-  padding-left: 8em;
+  padding-left: 10em;
+  padding-right: 6em;
 
 }
 
 #wedpackage-four{
   display: inline-block;
-  padding-right: 8em;
+  padding-right: 6em;
   padding-left: 8em;
 }
 
 #wedpackage-five {
-  display: inline-block;
- padding-bottom: 0;
- padding-left: 8em;
- padding-right: 8em;
+ display: inline-block;
+ padding-bottom: 3em;
+ padding-left: 6em;
+ padding-right: 6em;
  text-align: center;
 }
 
 #wedpackage-six {
  display: inline-block;
- padding-right: 8em;
- padding-left: 8em;
+ padding-right: 6em;
+ padding-left: 10em;
 
 }
 
@@ -190,7 +205,6 @@ input[type=submit]:hover {
   }
 
 
-
   #package-one-m {
     display:none;
       
@@ -236,6 +250,56 @@ input[type=submit]:hover {
 
  
 }
+
+
+@media screen and (max-width: 991px) {
+
+
+
+  .bg-dark {
+      --bs-bg-opacity: 0;
+  }
+
+  .nav-link,
+  .navbar-toggler {
+      background-color: #212529;
+      width: 70px;
+      float:right;
+  }
+
+  .nav-link{
+    font-size: smaller;
+    text-align: center;
+  }
+  .navbar-toggler {
+      margin: 0;
+      border-radius: 0;
+      float: right;
+  }
+
+  .navbar-brand {
+      background-color: #212529;
+      width: 100%;
+      margin: 0;
+
+      
+  }
+  
+  h1 {
+      padding-right: 1em;
+  }
+
+  #nav {
+    padding: 0;
+    justify-content: end;
+}
+
+
+
+
+}
+
+
 @media screen and (max-width: 390px) {
   
 #company-history-section {
@@ -245,13 +309,12 @@ padding-left: 30px;
 padding-right: 30px;
 padding-bottom: 10px;}
 
-
-#slideshow {
-  display: none; 
+#slideshow { 
+  display: none;
 }
 
 .package {
-  padding: 01.em;
+  padding: 0.1em;
 }
  
 #border {
@@ -263,7 +326,6 @@ padding-bottom: 10px;}
   text-align: end;
   
 }
-
 
 
 #package-one {
@@ -280,7 +342,6 @@ padding-bottom: 10px;}
 #package-three {
   display:none;
    
-
 }
 
 #package-one-m {
@@ -293,6 +354,7 @@ padding-bottom: 10px;}
   font-size: 0.5em;
   float: left;
   padding-left: 8em;
+  padding-bottom: 3em;
 }
 
 #package-three-m {
@@ -334,7 +396,7 @@ padding-bottom: 10px;}
 #wedpackage-two-m {
  font-size: 0.5em;
  float: left;
- padding-left: 8em;
+ padding-left: 7em;
 }
 
 #wedpackage-three-m {
@@ -352,7 +414,8 @@ padding-bottom: 10px;}
 #wedpackage-five-m {
  font-size: 0.5em;
  float: left;
- padding-left: 8em;
+ padding-left: 7em;
+ padding-bottom: 3em;
 }
 
 #wedpackage-six-m {
@@ -377,9 +440,14 @@ iframe {
  
 }
 
-
+.navbar-toggler {
+  position: absolute;
+  top: 10px;
+   
+}
 
 }
+
 
 
 
@@ -451,6 +519,7 @@ h1 {
 #socials {
   text-align: center;
 }
+
 #socials a {
   text-decoration: none;
 }
@@ -515,51 +584,4 @@ h1 {
 }
 
 
-/*---------------SLIDE SHOW CODE WRITTEN BY GRADAR ON CODEPEN.IO-------------*/
 
-@media screen and (max-width: 991px) {
-
-
-
-  .bg-dark {
-      --bs-bg-opacity: 0;
-  }
-
-  .nav-link,
-  .navbar-toggler {
-      background-color: #212529;
-      width: 70px;
-      float:right;
-  }
-
-  .nav-link{
-    font-size: smaller;
-    text-align: center;
-  }
-  .navbar-toggler {
-      margin: 0;
-      border-radius: 0;
-      float: right;
-  }
-
-  .navbar-brand {
-      background-color: #212529;
-      width: 100%;
-      margin: 0;
-
-      
-  }
-  
-  h1 {
-      padding-right: 1em;
-  }
-
-  #nav {
-    padding: 0;
-    justify-content: end;
-}
-
-
-
-
-}
